--- a/terminal/contact.html
+++ b/terminal/contact.html
@@ -85,8 +85,29 @@
         </ul>
       </a>
       <span class="nav-add-button">+</span>
-      <span class="nav-menu-button">&gt;&gt;</span>
+      <a class="nav-menu-button" href="javascript:void(0);" onclick="openMenu()">&gt;&gt;</a>
     </nav>
+    <script>
+      function openMenu() {
+        var navMenu = document.getElementById("nav-menu");
+        if (navMenu.className === "nav-menu") {
+          navMenu.className += "-active";
+        } else {
+          navMenu.className = "nav-menu";
+        }
+      }
+
+      function closeNavMenuOnScreenWidth(windowSize) {
+        var navMenu = document.getElementById("nav-menu");
+  if (navMenu && !windowSize.matches) {
+    navMenu.className = "nav-menu";
+  }
+}
+
+var windowSize = window.matchMedia("(max-width: 901px)")
+closeNavMenuOnScreenWidth(windowSize)
+windowSize.addListener(closeNavMenuOnScreenWidth)
+    </script>
     <script>
       document.addEventListener("keydown", (keyboardEvent) => {
         [...document.querySelectorAll(`[data-hotkey]`)].forEach((elem) => {
@@ -112,7 +133,14 @@
         });
       });
     </script>
-    <!-- End of Navbar -->
+   <div class="nav-menu" id="nav-menu">
+      <a href="../index.html" id="menu-home">Home</a>
+      <a href="about.html" id="menu-about">About</a>
+      <a href="projects.html" id="menu-projects">Projects</a>
+      <a href="blog.html" id="menu-blog">Blog</a>
+      <a href="contact.html" id="menu-contact">Contact</a>
+    </div>
+       <!-- End of navbar -->
   <div style="padding-left: 15px">
     <div class="terminal-text" id="last-login"></div>
     <script>
