set and remove focus

--- a/terminal/blog.html
+++ b/terminal/blog.html
@@ -87,6 +87,14 @@
         }
       }
 
+      window.addEventListener('mouseup', function(event){
+	      var nav = document.getElementById('nav-menu');
+
+        if (nav && event.target != nav && event.target.parentNode != nav){
+              nav.className = "nav-menu";
+          }
+        });
+
       function closeNavMenuOnScreenWidth(windowSize) {
         var navMenu = document.getElementById("nav-menu");
   if (navMenu && !windowSize.matches) {
@@ -179,6 +187,15 @@ windowSize.addListener(closeNavMenuOnScreenWidth)
               counter = parseInt(counter);
               var inputWithCounter = `input-${counter + 1}`;
               var deactivateInput = true;
+
+              window.addEventListener('mouseup', function(event){
+                var input = document.getElementById(`input-${counter}`)
+                
+                if (input && input !== document.activeElement){
+                    input.focus();
+                  }
+                });
+
 
               document
                 .getElementById(`input-${counter}`)
