add first desktop

--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>Florian Schmitz</title>
   </head>
   <body>
-    <h1>Desktop of FloOS</h1>
+    <div class="window">
+      <span>FloOS</span>
+      <span>Di. 26.Juli 00:53</span>
+    </div>
+    <div class="bottom-nav-bar">
+      <a>Overview</a>
+      <a>VS-Code</a>
+      <a>Chrome</a>
+      <a href="../index.html">iTerm2</a>
+      <a>Sourcetree</a>
+      <a>Slack</a>
+      <a>Spotify</a>
+    </div>
   </body>
 </html>
