--- a/terminal/contact.html
+++ b/terminal/contact.html
@@ -177,7 +177,7 @@ windowSize.addListener(closeNavMenuOnScreenWidth)
     <script type="text/javascript">
       const typewriter = new Typewriter("#typewriter", {
         loop: false,
-        delay: 100,
+        delay: 70,
       });
 
       typewriter
@@ -192,7 +192,7 @@ windowSize.addListener(closeNavMenuOnScreenWidth)
       }, 2000);
     </script>
     <div id="line-2" style="display: none">
-      <p>contact@flo-dev.me</p>
+      <p>✉️ contact@flo-dev.me</p>
       <span class="terminal-text-highlighted">portfolio </span>
           <span>⚡️</span>
           <input
